injected blocks need to pass ruff

--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "566cf967",
+   "id": "4b31b914",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc9e12e",
+   "id": "591c96b6",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,31 +25,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965af885",
+   "id": "8e03a646",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer \n"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b4b70f",
+   "id": "5fa2627e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "995ab7ce",
+   "id": "7142c668",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa3d7be",
+   "id": "4d314046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05509e3",
+   "id": "2c2c91a1",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b77ee5",
+   "id": "c2b97c7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc36c72",
+   "id": "385067da",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05f87a82",
+   "id": "808602fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b44559",
+   "id": "7779673f",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -167,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d5e514b",
+   "id": "4a16bb2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bcb48b3",
+   "id": "e9cbe947",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -193,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd92341",
+   "id": "899ad203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c6ed39",
+   "id": "b95c6952",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -211,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b666af",
+   "id": "2c4ea55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da175b7b",
+   "id": "39bae663",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -301,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98f1ac50",
+   "id": "0152a21c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12bac21a",
+   "id": "f9f2b181",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -353,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b413ed5a",
+   "id": "fd2ef4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e77924",
+   "id": "9c8cf4b4",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -407,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876ba0f2",
+   "id": "60083d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af68741",
+   "id": "7d5174e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5916c3cb",
+   "id": "a608cf38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6d7448",
+   "id": "ac022c04",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -451,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf494d0a",
+   "id": "f2a09834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357b2c86",
+   "id": "82515637",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -474,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84bd7549",
+   "id": "cffa3d1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d266d2a1",
+   "id": "4695344e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6328de8f",
+   "id": "7c9cc607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b81038b",
+   "id": "e83dac04",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
