--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26826211",
+   "id": "61350549",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "832b88b4",
+   "id": "5cdda092",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,31 +27,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "969bbbcc",
+   "id": "ef62a444",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer \n"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41748474",
+   "id": "c3af1cf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e8014d8",
+   "id": "989c24bc",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7352bbf0",
+   "id": "d360a00a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14963f9f",
+   "id": "77231827",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb618d54",
+   "id": "0a595ceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa3f57f",
+   "id": "a719760f",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -122,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5549152c",
+   "id": "f3c008cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7c5d645",
+   "id": "d21ae4eb",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -169,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac98165",
+   "id": "1f59b3c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb99873c",
+   "id": "b7ce6ffe",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1619f2e",
+   "id": "9e4a9df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8895a7f0",
+   "id": "d0f95e86",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -242,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af32e36e",
+   "id": "0eef341c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8241c06",
+   "id": "ca232974",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -368,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba29a63d",
+   "id": "cc41ccd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f733458",
+   "id": "1cc86025",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -439,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5efd286",
+   "id": "1210f637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5245e40f",
+   "id": "c1bec249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e46b28",
+   "id": "a00c2f22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6388cffb",
+   "id": "e26f2b05",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -483,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af08e47",
+   "id": "6b0c16c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24884cc3",
+   "id": "6029cce2",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -506,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f2d0e2",
+   "id": "ede95f7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98db8bc6",
+   "id": "db0b85e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0234d630",
+   "id": "676da66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f790c7",
+   "id": "879ce764",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
