--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b52e3e14",
+   "id": "180d64a4",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8bdd897",
+   "id": "33dc31a2",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,31 +27,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8f43fd",
+   "id": "3b223f0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer \n"
+    "!pip install -q data-designer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd30df0",
+   "id": "9a2ab316",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19140f29",
+   "id": "7f061323",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5111abc3",
+   "id": "c4be8e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c05285e",
+   "id": "b89575d7",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d36f9f",
+   "id": "236a2916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "737515ef",
+   "id": "4df6e463",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -116,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4d27e7",
+   "id": "53d41281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d3f7b5",
+   "id": "5cd3f03e",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -163,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a6cf53",
+   "id": "6bca047c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0698182b",
+   "id": "875c849c",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "623fb7fa",
+   "id": "4383058a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24dcb1b2",
+   "id": "81b460ba",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -232,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773fb7e4",
+   "id": "55054448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c89239",
+   "id": "48fc0954",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47cdc500",
+   "id": "eafe69da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06eface",
+   "id": "78a93876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5cafa10",
+   "id": "1004f0e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9e55d7",
+   "id": "e712bc10",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -383,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993cd27f",
+   "id": "1f28cf03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960e2c6c",
+   "id": "d4511bf3",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -406,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd696b5",
+   "id": "5a1ea546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1be27a",
+   "id": "ec54d5b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4101f6a2",
+   "id": "d0bfcb9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857a0ded",
+   "id": "cebfcbec",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
