--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e86fc40",
+   "id": "16835351",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59cb50b",
+   "id": "52a4f774",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109f3eed",
+   "id": "7d9d836f",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,31 +36,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa21eed",
+   "id": "611577bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer pillow\n"
+    "!pip install -q data-designer pillow"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd12beef",
+   "id": "8f9cd95f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
+    "import os\n",
+    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "import os\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c4162d82",
+   "id": "1ed0cc0d",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -71,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecec234b",
+   "id": "2d08fd71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504f1d40",
+   "id": "a210d017",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -115,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59c8ab0",
+   "id": "c3eb41f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71bb9093",
+   "id": "2a279c56",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -141,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfceb4f8",
+   "id": "2c93ec09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08426a33",
+   "id": "4e2b4500",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -179,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afad97d0",
+   "id": "a7dc93d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e86661",
+   "id": "1a914dc3",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b906647b",
+   "id": "dacf9004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2827d8",
+   "id": "e602b972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff5bddf",
+   "id": "7ad701fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b46db348",
+   "id": "c6ade03b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93014a2a",
+   "id": "5dd4c526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d75ac8",
+   "id": "6fd54792",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf45f8a",
+   "id": "69967b8d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1f9b8f",
+   "id": "827d7a34",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4ebb7e",
+   "id": "27b9d461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28bc690a",
+   "id": "f56d6c41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572bdc4c",
+   "id": "d828b41d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a24fdd",
+   "id": "60bf5e50",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -408,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ec9f06",
+   "id": "fea6e43d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10a548d1",
+   "id": "83fa6b55",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -429,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0dfa425",
+   "id": "6fa6945d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b843e820",
+   "id": "96257f6d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -466,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6856fa9f",
+   "id": "a4308cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d656659",
+   "id": "1a0747c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dfa4c11",
+   "id": "6cfe8cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15fcf9f1",
+   "id": "2ab3bedd",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
