Refactor seed datasets

--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e6331ad",
+   "id": "32827bda",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3aad47",
+   "id": "cbe6b81e",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c39e2a5",
+   "id": "5b007eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8652e5e",
+   "id": "58dfdb07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51e6323",
+   "id": "03d07dff",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de6b279",
+   "id": "749a1536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a484a8d",
+   "id": "5c31d723",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7554bd1a",
+   "id": "826f2421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc1d9f84",
+   "id": "b6bfc01a",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d22674",
+   "id": "11aa0146",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187da050",
+   "id": "c10b93a6",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977497d1",
+   "id": "02ae97ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92c51ea0",
+   "id": "c4c780c8",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d7a4e6",
+   "id": "685417ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "314c4719",
+   "id": "6bae388c",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bcad060",
+   "id": "6122711b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,12 +289,12 @@
     ")\n",
     "\n",
     "# Optionally validate that the columns are configured correctly.\n",
-    "config_builder.validate()"
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aab7414d",
+   "id": "12d8c063",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f191f5bf",
+   "id": "c4c21fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d893b3d",
+   "id": "be6bd3c8",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2abadac9",
+   "id": "99e953d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c9cb423",
+   "id": "ec30007b",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e3a022",
+   "id": "7ac1f25b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f7913d",
+   "id": "67d8dff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6621c80f",
+   "id": "f78e4d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b451ded",
+   "id": "ee838ed6",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7cb6cc",
+   "id": "4bea0fca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "721b3c7d",
+   "id": "da9875d4",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad777d1",
+   "id": "8c7f20b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df089509",
+   "id": "2f5fdaa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37fa65b",
+   "id": "5c2d935f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d1802b",
+   "id": "a80515b7",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
