--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fabaacf3",
+   "id": "ba3eb53c",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c43b45f",
+   "id": "71e3de28",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ec517f",
+   "id": "f12bda54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cda5d44",
+   "id": "c8e1f477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd6ad06",
+   "id": "efc5ac26",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b68f1ed",
+   "id": "3ffd67ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ccb4a3e",
+   "id": "782aaacd",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc9a754a",
+   "id": "1b092ccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1335a7",
+   "id": "cf4e19e2",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ae7a51e",
+   "id": "ff05156e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "891d5040",
+   "id": "bfbac905",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3a95b64",
+   "id": "d2c7a5d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d67b2b1",
+   "id": "6fb54697",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78fbeae4",
+   "id": "0ea9bb0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69463e64",
+   "id": "987fbf33",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5da9004",
+   "id": "9960d332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,12 +348,12 @@
     ")\n",
     "\n",
     "# Optionally validate that the columns are configured correctly.\n",
-    "config_builder.validate()"
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63196378",
+   "id": "81f8d04a",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36fe581f",
+   "id": "e9583bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998e907e",
+   "id": "c79829f3",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ec151e",
+   "id": "cceb2346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231e4b2d",
+   "id": "4c35a66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e9b1ecd",
+   "id": "c5cd23a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47a8e374",
+   "id": "2486fc8b",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cb581f6",
+   "id": "ef90239f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff26604",
+   "id": "d9cbd2f6",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2804c0bb",
+   "id": "f0dcf922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e44d4940",
+   "id": "aac62046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1da63b8c",
+   "id": "33875a50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec74a797",
+   "id": "4d532955",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
