--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0a5ad9c",
+   "id": "9a23e054",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f390e88",
+   "id": "10fbb133",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5d2be3",
+   "id": "11777ee9",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7975769",
+   "id": "69ee8b75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75793ed8",
+   "id": "123d0751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09868c88",
+   "id": "83e5d174",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c505114",
+   "id": "eec65d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +96,7 @@
     "    ChatCompletionInferenceParams,\n",
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
+    "    DataFrameSeedSource,\n",
     "    ImageContext,\n",
     "    ImageFormat,\n",
     "    LLMTextColumnConfig,\n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831df7e9",
+   "id": "51b4f7fb",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -119,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433cdf1a",
+   "id": "5c06aed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eddf1262",
+   "id": "5d9f3e5e",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -145,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7001a15d",
+   "id": "fc21c884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73bb672c",
+   "id": "8f0a5b51",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231e84e9",
+   "id": "3fb63c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd756993",
+   "id": "647c040f",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -209,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e218552",
+   "id": "b4891ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf33a7ac",
+   "id": "8b9f6efd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7b9d525",
+   "id": "243347f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7474c081",
+   "id": "e26a5cf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,21 +301,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c56d461",
+   "id": "d13af281",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the seed dataset containing our processed images\n",
     "df_seed = pd.DataFrame(img_dataset)[[\"uuid\", \"image_filename\", \"base64_image\", \"page\", \"options\", \"source\"]]\n",
-    "config_builder.with_seed_dataset(\n",
-    "    DataDesigner.make_seed_reference_from_dataframe(df_seed, file_path=\"colpali_train_set.csv\")\n",
-    ")"
+    "config_builder.with_seed_dataset(DataFrameSeedSource(df=df_seed))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba32ed33",
+   "id": "fbd517f5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d93b821",
+   "id": "980fbfbd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "516f5380",
+   "id": "6cffa555",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -368,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db8df1c",
+   "id": "26f980ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0064e2ca",
+   "id": "adf246c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f39f30",
+   "id": "8ee56c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1460b2d",
+   "id": "e543a7bf",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -412,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22786db9",
+   "id": "f6bebd0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a249f2ef",
+   "id": "6e5566cb",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -433,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fcc082",
+   "id": "1b5210b8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d404d91c",
+   "id": "64693378",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -470,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6da5b84b",
+   "id": "b5e0fb82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9f69a5",
+   "id": "eb09bc3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d980ba69",
+   "id": "0c4d34ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4f8c1c",
+   "id": "fce1cc65",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
